--- a/.github/workflows/test_action.yml
+++ b/.github/workflows/test_action.yml
@@ -1,20 +1,24 @@
- on: [pull_request_target]
+name: issue-announce-test-injection
+on:
+  issues:
+    types: [opened]
 
- jobs:
-   add_pr_comment:
-     permissions: write-all
-     runs-on: ubuntu-latest
-     name: OpenAI PR Comment
-     env:
-       GIT_COMMIT_HASH: ${{ github.event.pull_request.head.sha }}
-       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-       PR_NUMBER: ${{ github.event.pull_request.number }}
-       PR_TITLE: ${{ github.event.pull_request.title }}      
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-     steps:
-       - uses: actions/checkout@v3
-         with:
-           ref: ${{ github.event.pull_request.head.sha }}  
-
-       - run: |
-           echo "PR Branch is: ${{ github.event.pull_request.head.ref }}"
+    steps:
+      - name: Git Issue Details
+        run: |
+          export issue_title=$(echo "${{ github.event.issue.title }}" | sed -e "s/'//g" -e 's/"//g')
+          echo "Issue creator: ${{ github.event.issue.user.login }}"
+          echo "Issue title: ${{ github.event.issue.title }}"
+          echo "Issue number: ${{ github.event.issue.number }}"
+          echo "Issue url: ${{ github.event.issue.html_url }}"
+          echo "Using issue_title: $issue_title"
+      - name: Curl My Personal Site
+        run: |
+            export issue_title=$(echo "${{ github.event.issue.title }}" | sed -e "s/'//g" -e 's/"//g')
+            curl --location --request GET 'thi3nl0ng.github.io' \
+            --header 'Content-Type: application/json; charset=UTF-8' \
+            --data "{'text': '[${{ github.event.issue.number }}] ${{ github.event.issue.html_url }} $issue_title (${{ github.event.issue.user.login }})'}"
