--- a/.github/workflows/issue_action.yml
+++ b/.github/workflows/issue_action.yml
@@ -1,4 +1,4 @@
-name: issue-announce-test-injection
+name: new-issue-announce-action
 on:
   issues:
     types: [opened]
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Git Issue Details
+      - name: Issue Details
         run: |
           export issue_title=$(echo "${{ github.event.issue.title }}" | sed -e "s/'//g" -e 's/"//g')
           echo "Issue creator: ${{ github.event.issue.user.login }}"
