--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -4,13 +4,13 @@ on:
   workflow_dispatch:
   pull_request_target:
     branches:
-      - main
+      - master
     paths:
       - .github/workflows/ 
       - docker/**
   push:
     branches:
-      - main
+      - master
     paths:
       - .github/workflows/build_image.yml
       - docker/**
