--- a/.github/workflows/issue_action.yml
+++ b/.github/workflows/issue_action.yml
@@ -11,11 +11,11 @@ jobs:
       - name: Issue Details
         run: |
           export issue_title=$(echo "${{ github.event.issue.title }}" | sed -e "s/'//g" -e 's/"//g')
-          #echo "Issue creator: ${{ github.event.issue.user.login }}"
-          #echo "Issue title: ${{ github.event.issue.title }}"
-          #echo "Issue number: ${{ github.event.issue.number }}"
-          #echo "Issue url: ${{ github.event.issue.html_url }}"
-          #echo "Using issue_title: $issue_title"
+          echo "Issue creator: ${{ github.event.issue.user.login }}"
+          echo "Issue title: ${{ github.event.issue.title }}"
+          echo "Issue number: ${{ github.event.issue.number }}"
+          echo "Issue url: ${{ github.event.issue.html_url }}"
+          echo "Using issue_title: $issue_title"
      # - name: Curl My Personal Site
      #   run: |
      #       export issue_title=$(echo "${{ github.event.issue.title }}" | sed -e "s/'//g" -e 's/"//g')
